OS and git ignore updates

--- a/package/Dockerfile
+++ b/package/Dockerfile
@@ -1,3 +1,4 @@
-FROM alpine
+FROM ghcr.io/oracle/oraclelinux:7-slim
+RUN yum update -y
 COPY bin/local-path-provisioner /usr/bin/
 CMD ["local-path-provisioner"]
