--- a/package/Dockerfile
+++ b/package/Dockerfile
@@ -2,8 +2,7 @@
 # Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.
 
 FROM ghcr.io/oracle/oraclelinux:7-slim
-RUN yum update -y && yum-config-manager --enable ol7_u8_security_validation && \
-    yum update -y openssl-libs && \
+RUN yum update -y && \
     yum clean all && \
     rm -rf /var/cache/yum
 
